# 3D_Particle_Gravity

./: .gitignore  CMakeLists.txt  README.md
src/: barnes_hut.cpp  barnes_hut.hpp  barnes_hut_box.cpp  main.cpp  particle.cpp  particle.hpp  vectors.cpp  vectors.hpp
